# HuyEngine

./: .gitignore  BUILD_INSTRUCTIONS_RU.md  BUILD_QUICKSTART.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DOCS_NAVIGATION.md  PACKAGE_README.md  README.md  build.bat  main.cpp
.PVS-Studio/: depend_info.json
.github/workflows/: build-and-release.yml  clang-format-checker.yml  linux-build.yml  package-and-verify.yml  windows-build.yml
App/: CMakeLists.txt  EngineConfig.h.template
App/Source/: Version.h.in  main.PVS-Studio.i  main.cpp  pch.hpp
Automation/: .build_state.json  BUILD_FAQ.md  BUILD_SYSTEM_README.md  README.md  automation_new.py  build_actions.py  build_config.py  build_menu.py
Automation/CMAKE/: CmakeHelpers.cmake
Engine/: CMakeLists.txt  EngineConfig.h.template
Engine/Source/: main.cpp
Engine/Source/Core/: Engine.cpp  Engine.hpp  Engine.ixx  README.md
Templates/: ClassTemplate.cpp  ClassTemplate.h
cmake/: CPackReleaseConfig.cmake  version.txt.in
docs/: ARCHITECTURE.md  BUILD_INSTRUCTIONS_RU.md  BUILD_QUICKSTART.md  CHANGELOG.md  CI_CD_SETUP_REPORT.md  CLION_HOTKEYS.md  HOTKEYS_SETUP.md  PROJECT_STATUS.md  QUICK_UNICODE_FIX.md  README.md  SYSTEMS_SBORKI.md  TROUBLESHOOTING.md  UNICODE_FIX_README.md  VSCODE_SETUP.md  АКТУАЛИЗАЦИЯ_ОТЧЕТ.md
packaging/: pack.ps1
